--- a/Inference_tts.ipynb
+++ b/Inference_tts.ipynb
@@ -7,7 +7,7 @@
         "id": "61fe7942"
       },
       "source": [
-        "# Inference examples"
+        "# Inference TTS"
       ]
     },
     {
@@ -24,7 +24,7 @@
       "outputs": [],
       "source": [
         "# !pip install --break-system-packages whisperspeech\n",
-        "!pip install --break-system-packages 'accelerate>=0.26.0'"
+        "!pip install accelerate>=0.26.0'"
       ]
     },
     {
@@ -41,8 +41,8 @@
       "outputs": [],
       "source": [
         "# Do not forget to install all dependencies first:\n",
-        "!pip install --break-system-packages -Uqq WhisperSpeech\n",
-        "!pip install --break-system-packages webdataset"
+        "!pip install -Uqq WhisperSpeech\n",
+        "!pip install webdataset"
       ]
     },
     {
