--- a/ollama_text_generation.ipynb
+++ b/ollama_text_generation.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/wandrilleflamantphospho/Documents/edge-ai-hackathon/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModel\n",
     "from transformers import GPT2Tokenizer\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/ht/gnfxwh354lgdzms1j7hx2hp80000gn/T/ipykernel_39793/2672635637.py:6: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  ollama_client = Ollama(base_url=\"http://localhost:11434\", model=\"llama3\")\n",
+      "/var/folders/ht/gnfxwh354lgdzms1j7hx2hp80000gn/T/ipykernel_39793/3569868309.py:11: LangChainDeprecationWarning: The method `BaseLLM.__call__` was deprecated in langchain-core 0.1.7 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+      "  response = ollama_model(prompt)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'\"Hey! I was thinking we could grab a drink together between 2am and 3pm tomorrow. Would love to catch up with you then!\"'"
+       "'\"Hey! Would you like to grab a drink sometime between 2am and 3pm tomorrow? I\\'d love to catch up with you then. Let me know if that works for you!\"'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,16 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\"Hello, I\\'d like to reserve a table for lunch at an Italian restaurant that can accommodate 8 people. Could you please let me know if that\\'s feasible and if so, what time slots are available? Thank you!\"'"
+       "'Here\\'s a polite and concise message:\\n\\n\"Hi, I\\'d like to make a reservation at your Italian restaurant for an upcoming lunch. We\\'re a group of 8 people and would like to dine with you on [insert date]. Could you please let me know if you have availability at that time? Thank you!\"'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,6 +155,43 @@
    "source": [
     "generate_answer_ollama(\"lunch italian restaurant 8 people\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Hardware accelerator e.g. GPU is available in the environment, but no `device` argument is passed to the `Pipeline` object. Model will be on CPU.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import pipeline\n",
+    "from datasets import load_dataset\n",
+    "import soundfile as sf\n",
+    "import torch\n",
+    "\n",
+    "synthesiser = pipeline(\"text-to-speech\", \"microsoft/speecht5_tts\")\n",
+    "\n",
+    "embeddings_dataset = load_dataset(\"Matthijs/cmu-arctic-xvectors\", split=\"validation\")\n",
+    "speaker_embedding = torch.tensor(embeddings_dataset[7306][\"xvector\"]).unsqueeze(0)\n",
+    "# You can replace this embedding with your own as well.\n",
+    "\n",
+    "speech = synthesiser(generate_answer_ollama(\"Barber next monday afternon.\"), forward_params={\"speaker_embeddings\": speaker_embedding})\n",
+    "\n",
+    "sf.write(\"speech.wav\", speech[\"audio\"], samplerate=speech[\"sampling_rate\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
